# rust_projects

./: .gitignore
7_languages_in_7_weeks/ruby/: day_2.md  guessing_game.rb  singly_linked_list.rb
advent_of_christmas/: Cargo.toml
advent_of_christmas/src/: day_10.rs  day_11.rs  day_12.rs  day_17.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_9.rs
aoc_2019/src/: day1.rs  day3.rs
aoc_2020/src/: day_14.rs  day_15.rs  day_16.rs
bank_tracking/: .gitignore  Cargo.toml  readme.md
bank_tracking/src/: main.rs  transaction.rs
beat_gen/: Cargo.toml  ideas.md
beat_gen/beat_gen/: ideas.md
beat_gen/beat_gen/src/: cli.rs
beat_gen/beat_gen/src/display/: ascii.rs  gscribe.rs
beat_gen/src/: cli.rs  lib.rs
beat_gen/src/display/: ascii.rs
beat_gen/src/generator/: benny.rs  mod.rs
books/nature_of_code/bouncing_ball/: Cargo.toml
books/nature_of_code/particle_hose/: Cargo.toml
books/nature_of_code/random_walker/: Cargo.toml
boxes/: Cargo.toml
challenges/aoc_2019/: Cargo.toml
challenges/aoc_2019/src/: day2.rs  day3.rs
challenges/aoc_2020/src/: day_1.rs  day_11.rs  day_13.rs  day_2.rs  day_8.rs
challenges/aoc_2022/src/: day_1.rs  day_10.rs  day_11.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
challenges/cc1/: Cargo.toml  readme.md
challenges/cc1/src/: main.rs
challenges/euler_project/src/: prob_1.rs  prob_2.rs  prob_3.rs
challenges/sort_algorithms/: Cargo.toml
challenges/sort_algorithms/src/: main.rs
clones/coding_train/: README.md
clones/pong/: Cargo.toml
clones/pong/src/: main.rs
coding_train/001_starfield/: Cargo.toml
d_roll/: Cargo.toml
d_roll/src/: main.rs
draw/: Cargo.toml
draw/src/: main.rs
euler_project/: Cargo.toml
euler_project/src/: prob_4.rs
fibonnaci/: Cargo.toml
fibonnaci/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
nature_of_code/: Cargo.toml
nature_of_code/1d_perlin/: Cargo.toml
nature_of_code/1d_perlin/src/: main.rs
nature_of_code/accel_balls/: Cargo.toml
nature_of_code/bouncing_balls/: Cargo.toml
nature_of_code/forceful_mouse/: Cargo.toml  README.md
nature_of_code/gauss_distribution/: Cargo.toml
nature_of_code/perlin_basic/: Cargo.toml
nature_of_code/random_walker/: Cargo.toml
nature_of_code/rotating_baton/: Cargo.toml
opengl/cubes/: Cargo.toml  README.md
opengl/cubes/src/: main.rs
opengl/hello_teapot/: Cargo.toml
opengl/hello_triangle/: Cargo.toml
pong/: Cargo.toml
pong/src/: main.rs
rlox/: grammar.txt
rlox/src/: app.rs  grammar.rs  lexer.rs  main.rs  parser.rs
rust-sokoban/: Cargo.toml
rust-sokoban/src/: components.rs  constants.rs  entities.rs  main.rs  map.rs  resources.rs
rust_adventures/boxes/: Cargo.toml
rust_adventures/weather-cli/: Cargo.toml
sandboxes/kameo/: Cargo.toml  readme.md
sandboxes/wgpu/: Cargo.toml  build.rs
sandboxes/wgpu/2d_fractals/: Cargo.toml
sandboxes/wgpu/2d_fractals/src/: dragon_curve.rs  hilbert_curve.rs  lib.rs  main.rs
sandboxes/wgpu/hello_buffers/: Cargo.toml
sandboxes/wgpu/hello_wgpu/: Cargo.toml
sandboxes/wgpu/hello_wgpu/src/: main.rs
sandboxes/wgpu/hello_wgsl/: Cargo.toml
sandboxes/wgpu/hello_wgsl/src/: lib.rs  main.rs
sandboxes/wgpu/src/: 10_model_loading.rs  10_model_loading.wgsl  1_hello_wgpu.rs  2_hello_wgsl.rs  3_buffers.rs  4_instancing.rs  5_transforms2d.rs  5_transforms2d.wgsl  5_uniforms.rs  6_textures.rs  6_textures.wgsl  7_uniforms_and_camera.rs  7_uniforms_and_camera.wgsl  8_instancing_again.rs  9_depth_buffer.rs  _uniforms.wgsl  camera.rs  lib.rs  model.rs  resources.rs  texture.rs
snake/: Cargo.toml
snake/src/: main.rs
sudoku/: Cargo.toml  README.md
sudoku/src/: gameboard.rs  gameboard_controller.rs  gameboard_view.rs  main.rs
tetris/: Cargo.toml
tetris/src/: game.rs  tetrimino.rs
the-rust-programming-language/guessing_game/: Cargo.toml
tiny_projects/3d_fractals/: README.md
tiny_projects/bank_tracking/: .gitignore  december_checking_account.csv  november_checking_account.csv  readme.md
tiny_projects/beat_gen/: Cargo.toml
tiny_projects/beat_gen/src/: cli.rs  main.rs
tiny_projects/beat_gen/src/display/: ascii.rs  gscribe.rs  mod.rs
tiny_projects/beat_gen/src/generator/: benny.rs  mod.rs
web_server/: Cargo.toml
web_server/src/: main.rs
wgpu/: readme.md
wgpu/2d_fractals/: Cargo.toml
(+55 files in other folders)
