[package]
name = "advent_of_christmas"
version = "0.1.0"
authors = ["Jack Glass <jackadrianglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1"
path = "src/day_1.rs"

[[bin]]
name = "2"
path = "src/day_2.rs"

[[bin]]
name = "3"
path = "src/day_3.rs"

[[bin]]
name = "4"
path = "src/day_4.rs"

[[bin]]
name = "5"
path = "src/day_5.rs"

[[bin]]
name = "6"
path = "src/day_6.rs"

[[bin]]
name = "7"
path = "src/day_7.rs"

[[bin]]
name = "8"
path = "src/day_8.rs"

[[bin]]
name = "9"
path = "src/day_9.rs"

[[bin]]
name = "10"
path = "src/day_10.rs"

[[bin]]
name = "11"
path = "src/day_11.rs"

[[bin]]
name = "12"
path = "src/day_12.rs"

[[bin]]
name = "13"
path = "src/day_13.rs"

[[bin]]
name = "14"
path = "src/day_14.rs"

[[bin]]
name = "15"
path = "src/day_15.rs"

[[bin]]
name = "16"
path = "src/day_16.rs"

[[bin]]
name = "17"
path = "src/day_17.rs"

[dependencies]
regex = "*"
