[package]
name = "beat_gen"
version = "0.1.0"
authors = ["Jack Glass <jackadrianglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "beatlib"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "beat"
path = "src/main.rs"


[dependencies]
rand = "0.8.3"
clap = "2.33.3"
