[package]
name = "euler_project"
version = "0.1.0"
authors = ["Jack Glass <jackadrianglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "prob_1"
path = "src/prob_1.rs"

[[bin]]
name = "prob_2"
path = "src/prob_2.rs"

[[bin]]
name = "prob_3"
path = "src/prob_3.rs"

[[bin]]
name = "prob_4"
path = "src/prob_4.rs"

[dependencies]
