[package]
name = "web_server"
version = "0.1.0"
authors = ["Jack Glass <jackadrianglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello"
path = "src/lib.rs"

[[bin]]
name = "web_server"
path = "src/main.rs"
