[package]
name = "wgpu_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1_hello_wgpu"
path = "src/2_hello_wgpu.rs"

[[bin]]
name = "2_hello_wgsl"
path = "src/2_hello_wgpu.rs"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3"
