[package]
name = "wgpu_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1_hello_wgpu"
path = "src/1_hello_wgpu.rs"

[[bin]]
name = "2_hello_wgsl"
path = "src/2_hello_wgsl.rs"

[[bin]]
name = "3_buffers"
path = "src/3_buffers.rs"

[[bin]]
name = "4_instancing"
path = "src/4_instancing.rs"

[[bin]]
name = "5_transforms2d"
path = "src/5_transforms2d.rs"

[[bin]]
name = "6_textures"
path = "src/6_textures.rs"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive"] }
anyhow = "1.0"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
