[package]
name = "beat_gen"
version = "0.1.0"
authors = ["Jack Glass <jackadrianglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "beat"
path = "src/main.rs"
test = true
doctest = false


[dependencies]
rand = "0.8.3"
clap = "2.33.3"
opener = "0.6.1"
